<resources>
    <string name="app_name">KiddyMov</string>
    <string name="parents_button_text">Parents</string>
    <string name="kids_button_text">kids</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_label">app_label</string>
    <string name="search_vid">Search online</string>
    <string name="search_vid2">https://www.youtube.com/watch?v=cbP2N1BQdYc</string>
    <string name="search_box">Search online</string>
    <string name="search_button">Go!</string>
    <string name="add_vid_box">https://www.youtube.com/watch?v=cbP2N1BQdYc</string>
    <string name="add_vid_button">Go!</string>
    <string name="q1">How good is this movie?</string>
    <string name="a1">Hell good!</string>
    <string name="a2">Not for my child</string>
    <string name="enter_vid_to_db">Enter video</string>
    <string name="add_record_button">Add record</string>
    <string name="add_record_done_button_text">Done</string>
    <string name="kids_menu_button_start_voice">Start S2T</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>


    <string name="title_activity_main">Hello World!</string>
    <string name="title_activity_kids_menu">Kids Menu</string>
    <string name="title_activity_parents_menu">Parent Menu</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_add_new_vid">AddNewVid</string>
    <string name="title_activity_audio_record">AudioRecordActivity</string>

</resources>
