<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.woody.kiddymov.ParentMenu">

    <EditText
        android:id="@+id/key_to_search"
        android:text="@string/search_vid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchVidOnLine"/>

    <EditText
        android:id="@+id/add_vid_box"
        android:text="@string/add_vid_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/add_vid_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addNewVid"/>
</LinearLayout>
